--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="styelshhet" type="text/css" href="assets/css/style.css">
+    <title>Trivia Game</title>
 </head>
 <body>
-    
+    <h1>Totally Trivial Trivia!</h1>
+
+    <h2>Time Remaining: </h2>
+
+    <h4>Question 1</h4>
+
+    <h4>Question 2</h4>
+
+    <h4>Question 3</h4>
+
+    <h4>Question 4</h4>
+
+    <h4>Question 5</h4>
+
+    <h4>Question 6</h4>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="assets/javascript/app.js"></script>
 </body>
 </html>
