--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Trivia Game</title>
 </head>
 <body>
+<div>
     <h1>Totally Trivial Trivia!</h1>
 
     <h2>Time Remaining: </h2>
@@ -23,6 +24,8 @@
     <h4>Question 5</h4>
 
     <h4>Question 6</h4>
+
+</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/app.js"></script>
