--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
     
         <h4>5. Name Canada's four Atlantic provinces.</h4>
 
-        <input type="radio" name="q1" value="a" id="q1a"> Alberta<br>
-        <input type="radio" name="q2" value="b" id="q2a"> British Columbia<br>
-        <input type="radio" name="q3" value="c" id="q3a"> Saskatchewan<br>
-        <!-- Newfoundland, Quebec, Prince Edward Island, Nova Scotia; Quebec, New Brunswick, Prince Edward Island, Nova Scotia; Newfoundland, New Brunswick, Prince Edward Island, Nova Scotia (A)-->
+        <input type="radio" name="q1" value="a" id="q1a"> Newfoundland, Quebec, Prince Edward Island, Nova Scotia<br>
+        <input type="radio" name="q2" value="b" id="q2a"> Nova Scotia; Quebec, New Brunswick, Prince Edward Island, Nova Scotia<br>
+        <input type="radio" name="q3" value="c" id="q3a"> Newfoundland, New Brunswick, Prince Edward Island, Nova Scotia<br>
+        <!-- Newfoundland, New Brunswick, Prince Edward Island, Nova Scotia (A)-->
     
         <h4>6. What is the capital of Saskatchewan?</h4>
 
-        <input type="radio" name="q1" value="a" id="q1a"> Alberta<br>
-        <input type="radio" name="q2" value="b" id="q2a"> British Columbia<br>
-        <input type="radio" name="q3" value="c" id="q3a"> Saskatchewan<br>
-        <!-- Regina (A), Saskatoon, Edmonton-->
+        <input type="radio" name="q1" value="a" id="q1a"> Regina<br>
+        <input type="radio" name="q2" value="b" id="q2a"> Saskatoon<br>
+        <input type="radio" name="q3" value="c" id="q3a"> Edmonton<br>
+        <!-- Regina -->
         <br><br>
 
         <input type="submit" value="Submit Answers">
