--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <h1>Totally Trivial Trivia!</h1>
 </header>
 
-    <p id="timer">Time Remaining:</p>
+    <button id="start">Start</button>
+
+    <p id="timer" "display">Time Remaining: 01:35</p>
 
 <section>
     <div id="results"></div>
